--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port=2000
 # DataSource Configuration
 spring.datasource.username=root
 spring.datasource.password=
+#spring.datasource.password=12345678
 spring.datasource.url= jdbc:mysql://localhost:3306/db_eazypos?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
 
 # JPA Configuration
