--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>6.14.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
