--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,16 @@
 			<artifactId>firebase-admin</artifactId>
 			<version>6.14.0</version>
 		</dependency>
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.17.12</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.200</version>
+		</dependency>
 
 	</dependencies>
 
